--- a/sensor/static/style.css
+++ b/sensor/static/style.css
@@ -29,7 +29,7 @@ p {
   margin: auto;
 }
 
-.graph{
+.graph {
   margin: 20px;
   grid-area: big;
   display: flex;
@@ -57,15 +57,16 @@ p {
   background-color: rgb(53, 53, 53);
   border-radius: 10px;
   margin: auto;
+  height: calc(100% - 40px);
 }
 
 em {
   background-color: rgb(92, 176, 204);
-  padding: 10px;
+  padding: 15px;
   border-radius: 10px;
 }
 
-h2{
+h2 {
   text-align: center;
 }
 
@@ -76,7 +77,11 @@ h2{
   margin: 20px 20px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
   flex-direction: column;
   border-radius: 10px;
+}
+
+.temperature > div > p {
+  font-size: 30px;
 }
